--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 		<h1>таньд энэ өдрийн мэнд хүргье энэхүү веб хуудас миний ИТҮ хичээлээр хийсэн лабраторийн ажилуудаа байршуулсан хуудас юм</h1>
-		<a href="">лабратори №1</a>
+		<a href="C:\Users\dondo\OneDrive\Desktop\2021_hawar_xicheel\itv\itv-dondovdorjbest1.github.io\lab-1\lab-1.html">лабратори №1</a>
 		<a href="">лабратори №2</a>
 		<a href="">лабратори №3</a>
 		<a href="">лабратори №4</a>
