--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
 	<title>интернэт технологийн үндэс</title>
 </head>
 <body>
-		<h1>таньд энэ өдрийн мэнд хүргье энэхүү веб хуудас миний ИТҮ хичээлээр хийсэн лабраторийн ажилуудаа байршуулсан хуудас юм</h1>
-		<a href="C:\Users\dondo\OneDrive\Desktop\2021_hawar_xicheel\itv\itv-dondovdorjbest1.github.io\lab-1\lab-1.html">лабратори №1</a>
-		<a href="">лабратори №2</a>
-		<a href="">лабратори №3</a>
-		<a href="">лабратори №4</a>
-		<a href="">лабратори №5</a>
+		<h1>Тавтай морилно уу</h1>
+		<p>Энэхүү хуудас нь ИТҮ хичээлийн лабраторын ажилыг танилцуулхад зориулагдсан болно</p>
+		<ul>
+		<li type="none">
+		<a href="lab-1\lab-1.html">лабратори №1</a></li>
+
+		<li type="none">
+		<a href="lab-2\lab-2.html">лабратори №2</a></li>
+
+		<li type="none">
+		<a href="lab-3\lab-3.html">лабратори №3</a></li>
+
+		<li type="none">
+		<a href="">лабратори №4</a></li>
+		</li>
+		</ul>
 </body>
 </html>
